# heritadapp

./: .gitignore  Anchor.toml  README.md  SESSION_STATE.md  WSL_BUILD_GUIDE.md  deploy-devnet.sh  package-lock.json  package.json  security-checklist.md
docs/superpowers/plans/: 2026-04-24-crypto-heranca-plan.md
docs/superpowers/specs/: 2026-04-23-crypto-heranca-arquitetura.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx  wallet-adapter.css
frontend/src/app/vaults/: page.tsx
frontend/src/app/vaults/[address]/: page.tsx
frontend/src/app/vaults/create/: page.tsx
frontend/src/components/: ClientOnly.tsx
frontend/src/hooks/: useProgram.ts  useVault.ts
frontend/src/lib/: anchor.ts
frontend/src/lib/idl/: crypto_heranca.json
keeper/: .env.example  .gitignore  README.md  jest.config.js  package-lock.json  package.json
keeper/src/: config.ts  index.ts  server.ts
keeper/src/db/: schema.sql  supabase.ts
keeper/src/routes/: api.ts
keeper/src/services/: claim.ts  heartbeat.ts  solana.ts  vault_monitor.ts
keeper/tests/: api.test.ts
programs/crypto_heranca/: Cargo.toml
programs/crypto_heranca/src/: errors.rs  events.rs  lib.rs
programs/crypto_heranca/src/instructions/: cancel_vault.rs  claim.rs  deposit_sol.rs  deposit_token.rs  heartbeat.rs  initialize_token_account.rs  initialize_vault.rs  mod.rs  update_config.rs
programs/crypto_heranca/src/state/: vault.rs
tests/: crypto_heranca.ts  crypto_heranca_tests.rs
