[package]
name = "crypto_heranca"
version = "0.1.0"
description = "Crypto-Herança — Dead Man's Switch para herança de ativos na Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crypto_heranca"

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1" }
anchor-spl = { version = "0.32.1", features = ["associated_token", "token"] }

# Travar versões para evitar edition2024
digest = "=0.10.7"
block-buffer = "=0.10.4"
crypto-common = "=0.1.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
